--- a/conservation/ile-de-la-tortue/index.html
+++ b/conservation/ile-de-la-tortue/index.html
@@ -174,8 +174,8 @@
 
                 <li>Réserves nationales de faune en milieu marin des îles Scott<sup>&nbsp;[&nbsp;<a class="button" onclick="fn();" title="Réserve nationale de faune (&nbsp;RNF&nbsp;)">3</a>&nbsp;]</sup></li>
 
-                <li>Zones de protection marine du Mont sous-marin SG̲áan K̲ínghlas-Bowie<sup>&nbsp;[&nbsp;<a class="button" onclick="fn();" title="Zones de protection marine (&nbsp;ZPM&nbsp;)">4</a>&nbsp;]</sup></li>
-                <!-- SG̲áan K̲ínghlas-Bowie Seamount -->
+                <li>Mont sous-marin SGáan Kínghlas-Bowie<sup>&nbsp;[&nbsp;<a class="button" onclick="fn();" title="Zones de protection marine (&nbsp;ZPM&nbsp;)">4</a>&nbsp;]</sup></li>
+                <!-- Zones de protection marine du Mont sous-marin SG̲áan K̲ínghlas-Bowie Seamount -->
 
                 <li>Zones de protection marine de Tang.Gwan – hačxwiqak – Tsigis<sup>&nbsp;[&nbsp;<a class="button" onclick="fn();" title="Zones de protection marine (&nbsp;ZPM&nbsp;)">4</a>&nbsp;]</sup></li>
                 <!-- Tang.ɢ̱wan – ḥačxwiqak – Tsig̱is -->
@@ -206,7 +206,7 @@
 
               </ul>
 
-              <p class="linebreak small">En savoir plus sur les zones protégées par le <a href="../../url/-ca/princeedwardisland-fisheries-tourism-sport-and-culture/" title="Gouvernement de l’Île-du-Prince-Édouard / Ministère des Pêches, du Tourisme, du Sport et de la Culture" target="_blank">ministère des Pêches, du Tourisme, du Sport et de la Culture</a> de l’Île-du-Prince-Édouard.</p>
+              <p class="linebreak small">En savoir plus sur les zones protégées par le <a href="../../url/-ca/princeedwardisland-peches-tourisme-sport-et-culture/" title="Gouvernement de l’Île-du-Prince-Édouard / Ministère des Pêches, du Tourisme, du Sport et de la Culture" target="_blank">ministère des Pêches, du Tourisme, du Sport et de la Culture</a> de l’Île-du-Prince-Édouard.</p>
 
             </div>
 
@@ -228,7 +228,7 @@
 
               </ul>
 
-              <p class="linebreak small">En savoir plus sur les zones protégées par le <a href="../../url/-ca/mb-gov-sd/" title="Manitoba / Ministry of Environment and Climate Change" target="_blank">ministère de l’Environnement et du Changement climatique</a> du Manitoba.</p>
+              <p class="linebreak small">En savoir plus sur les zones protégées par le <a href="../../url/-ca/mb-gov-sd-fr/" title="Manitoba / Ministre de l'Environnement et du Changement climatique" target="_blank">ministère de l’Environnement et du Changement climatique</a> du Manitoba.</p>
 
             </div>
 
@@ -518,7 +518,7 @@
 
               </ul>
 
-              <p class="linebreak small">En savoir plus sur les zones protégées par le <a href="../../url/-ca/parks/nt-gov-iti/" title="Gouvernement des Territoires du Nord-Ouest / Parcs des Territoires du Nord-Ouest" target="_blank">ministère de l’Industrie, du Tourisme et de l’Investissement</a> des Territoires du Nord-Ouest.</p>
+              <p class="linebreak small">En savoir plus sur les zones protégées par le <a href="../../url/-ca/parcs/nwt/" title="Gouvernement des Territoires du Nord-Ouest / Parcs des Territoires du Nord-Ouest" target="_blank">ministère de l’Industrie, du Tourisme et de l’Investissement</a> des Territoires du Nord-Ouest.</p>
               <!-- //gov.nt.ca/ecc/fr/ -->
 
             </div>
@@ -700,16 +700,13 @@
 
               </ul>
 
-              <p class="linebreak small">
-
-                En savoir plus sur les Premières Nations inscrites dans <a href="../../url/-ca/treaty/1/" title="Nation du Treaty 1" target="_blank">Traité 1</a>, <a href="../../url/-ca/treaty/2/" title="Gouvernement de la nation Anishinaabe sur le territoire du Traité 2" target="_blank">Traité 2</a>, <a href="../../url/-ca/treaty/gct3/" title="Grand conseil du traité 3" target="_blank">Traité 3</a>, Traité 4, <a href="../../url/-ca/treaty/5/" title="Le Sommet des nations souveraines du Traité 5" target="_blank">Traité 5</a>, <a href="../../url/-org/treaty/six/" title="Les nations du Traité Six" target="_blank">Traité 6</a>, <a href="../../url/-org/treaty/7/" title="Association des chefs des Premières Nations du Traité 7" target="_blank">Traité 7</a> et Traité 9.
-
-              </p>
+              <p class="linebreak small">En savoir plus sur les Premières Nations inscrites dans <a href="../../url/-ca/treaty/1/" title="Nation du Treaty 1" target="_blank">Traité 1</a>, <a href="../../url/-ca/treaty/2/" title="Gouvernement de la nation Anishinaabe sur le territoire du Traité 2" target="_blank">Traité 2</a>, <a href="../../url/-ca/treaty/gct3/" title="Grand conseil du traité 3" target="_blank">Traité 3</a>, Traité 4, <a href="../../url/-ca/treaty/5/" title="Le Sommet des nations souveraines du Traité 5" target="_blank">Traité 5</a>, <a href="../../url/-ca/treaty/six/" title="Les nations du Traité Six" target="_blank">Traité 6</a>, <a href="../../url/-ca/treaty/7/" title="Association des chefs des Premières Nations du Traité 7" target="_blank">Traité 7</a> et Traité 9.</p>
               <!-- le Traité de la Baie-James -->
 
               <p class="linebreak small title">Traités modernes au Manitoba</p>
               <ul class="small">
                 <li>Sioux Valley Dakota Nation (&nbsp;2014&nbsp;)<sup>&nbsp;[&nbsp;<a class="button" onclick="fn();" title="Traités modernes">7</a>,&nbsp;&nbsp;<a class="button" onclick="fn();" title="Self-Government">9</a>&nbsp;]</sup></li>
+
               </ul>
 
               <!-- <p class="linebreak small title">Saskatchewan</p>
@@ -749,7 +746,7 @@
 
               </ul>
 
-              <p class="linebreak small">En savoir plus sur les Premières Nations inscrites au <a href="../../url/-org/treaty8/" title="Premières Nations de l'Alberta signataires du Traité 8" target="_blank">Traité 8</a>, 10-11.</p>
+              <p class="linebreak small">En savoir plus sur les Premières Nations inscrites au <a href="../../url/-ca/treaty/8/" title="Premières Nations de l'Alberta signataires du Traité 8" target="_blank">Traité 8</a>, 10-11.</p>
 
               <p class="linebreak small title">Traités modernes dans le Territoires du Nord-Ouest<sup>&nbsp;[&nbsp;<a class="button" onclick="fn();" title="Traités modernes">7</a>&nbsp;]</sup></p>
               <ul class="small">
@@ -837,7 +834,7 @@
 
                 <li>Gitxsan Nations [<a href="../../url/fn/gitxsan/" title="Gitxsan Huwilp Government" target="_blank">gitxsan.ca</a>]</li>
 
-                <li>Nations Gwa’sala-‘Nakwaxda’xw [<a href="../../url/fn/gwanaknations/" title="Nations Gwa’sala-‘Nakwaxda’xw" target="_blank">gwanaknations.ca</a>]</li>
+                <li>Nations Gwa’sala-‘Nakwaxda’xw [<a href="../../url/fn/gwanak/" title="Nations Gwa’sala-‘Nakwaxda’xw" target="_blank">gwanaknations.ca</a>]</li>
 
                 <li>Nation Haisla [<a href="../../url/fn/haisla/" title="Nation Haisla" target="_blank">haisla.ca</a>]</li>
 
@@ -990,7 +987,7 @@
 
 
 
-            <p class="letterhead small">Il existe un certain nombre de Premières Nations au Canada qui ne sont pas répertoriées dans le contexte de ces traités ou territoires. Animat Habitat honore toutes les intendances autochtones des terres et des eaux à travers de l’Île de la Tortue. Notre studio s'est engagé dans un processus continu de collaboration et d’éducation. Nous travaillons à mettre à jour et à remplacer les informations qui sont la continuation des traumatismes causés par le vol, l’injustice, la désinformation et l’ignorance. Cette liste est présentée comme un hommage à la résilience autochtone passée, présente et future.</p>
+            <p class="linebreak small">Il existe un certain nombre de Premières Nations au Canada qui ne sont pas répertoriées dans le contexte de ces traités ou territoires. Animat Habitat honore toutes les intendances autochtones des terres et des eaux à travers de l’Île de la Tortue. Notre studio s'est engagé dans un processus continu de collaboration et d’éducation. Nous travaillons à mettre à jour et à remplacer les informations qui sont la continuation des traumatismes causés par le vol, l’injustice, la désinformation et l’ignorance. Cette liste est présentée comme un hommage à la résilience autochtone passée, présente et future.</p>
 
           </div>
         </div>
