--- a/conservation/turtle-island/index.html
+++ b/conservation/turtle-island/index.html
@@ -799,11 +799,12 @@
 
               </ul>
 
-              <p class="linebreak small">More about First Nations entered in <a href="../../url/-ca/treaty/1/" title="Treaty One Nation" target="_blank">Treaty 1</a>, <a href="../../url/-ca/treaty/2/" title="Government of Anishinaabe Nation in Treaty 2 Territory" target="_blank">Treaty 2</a>, <a href="../../url/-ca/treaty/gct3/" title="Grand Council of Treaty 3" target="_blank">Treaty 3</a>, Treaty 4, <a href="../../url/-ca/treaty/5/" title="The Summit of Treaty 5 Sovereign Nations" target="_blank">Treaty 5</a>, <a href="../../url/-org/treaty/six/" title="Treaty Six Nations" target="_blank">Treaty 6</a>, <a href="../../url/-org/treaty/7/" title="Treaty 7 First Nations Chiefs' Association" target="_blank">Treaty 7</a> and the James Bay Treaty.</p>
+              <p class="linebreak small">More about First Nations entered in <a href="../../url/-ca/treaty/1/" title="Treaty One Nation" target="_blank">Treaty 1</a>, <a href="../../url/-ca/treaty/2/" title="Government of Anishinaabe Nation in Treaty 2 Territory" target="_blank">Treaty 2</a>, <a href="../../url/-ca/treaty/gct3/" title="Grand Council of Treaty 3" target="_blank">Treaty 3</a>, Treaty 4, <a href="../../url/-ca/treaty/5/" title="The Summit of Treaty 5 Sovereign Nations" target="_blank">Treaty 5</a>, <a href="../../url/-ca/treaty/six/" title="Treaty Six Nations" target="_blank">Treaty 6</a>, <a href="../../url/-ca/treaty/7/" title="Treaty 7 First Nations Chiefs' Association" target="_blank">Treaty 7</a> and the James Bay Treaty.</p>
 
               <p class="linebreak small title">Modern Treaties in Manitoba</p>
               <ul class="small">
                 <li>Sioux Valley Dakota Nation (2014)<sup>&nbsp;[<a class="button" onclick="fn();" title="Modern Treaties">7</a>,&nbsp;<a class="button" onclick="fn();" title="Self-Government">9</a>]</sup></li>
+
               </ul>
               <!-- Assiniboine -->
 
@@ -820,7 +821,7 @@
 
               <p class="small">More about the Oyate, also called Sioux, in Očhéthi Šakówiŋ.</p>
 
-              <p class="small">More about the <a href="../../url/-com/tsuutina/" title="Tsuutʼina Nation" target="_blank">Tsuutʼina</a>&mdash;formerly known as the Sarcee.</p>
+              <p class="small">More about the <a href="../../url/fn/tsuutina/" title="Tsuutʼina Nation" target="_blank">Tsuutʼina</a>&mdash;formerly known as the Sarcee.</p>
 
             </div>
 
@@ -862,7 +863,7 @@
 
               </ul>
 
-              <p class="linebreak small">More about First Nations entered in <a href="../../url/-org/treaty8/" title="Treaty 8 First Nations of Alberta" target="_blank">Treaty 8</a>, Treaty 10 and 11.</p>
+              <p class="linebreak small">More about First Nations entered in <a href="../../url/-ca/treaty/8/" title="Treaty 8 First Nations of Alberta" target="_blank">Treaty 8</a>, Treaty 10 and 11.</p>
 
 
 
@@ -1005,7 +1006,7 @@
 
                 <li>Gitxsan Nations [<a href="../../url/fn/gitxsan/" title="Gitxsan Huwilp Government" target="_blank">gitxsan.ca</a>]</li>
 
-                <li>Gwa’sala-‘Nakwaxda’xw Nations [<a href="../../url/fn/gwanaknations/" title="Gwa’sala-‘Nakwaxda’xw Nations" target="_blank">gwanaknations.ca</a>]</li>
+                <li>Gwa’sala-‘Nakwaxda’xw Nations [<a href="../../url/fn/gwanak/" title="Gwa’sala-‘Nakwaxda’xw Nations" target="_blank">gwanaknations.ca</a>]</li>
 
                 <li>Haisla Nation [<a href="../../url/fn/haisla/" title="Haisla Nation" target="_blank">haisla.ca</a>]</li>
                 <!-- X̣àʼisla W̓áwís -->
@@ -1254,9 +1255,7 @@
 
             </div>
 
-            <!-- <p class="letterhead small">This is a list of Indigenous land claims in North America, starting in Canada. This list is a living document informed, in large part, by the contributions of Indigenous communities as documented by The Royal Canadian Geographical Society, as represented by Native Land Digital, as well as the public records ministered by the Crown-Indigenous Relations and Northern Affairs Canada (CIRNAC). Links to a number of First Nations and Inuit communities are included to encourage people to connect directly with Indigenous cultures and stories and traditional ways of life across Turtle Island.</p> -->
-
-            <p class="letterhead small">There are a number of First Nations in Canada not listed in context of the named or numbered treaties. Animat Habitat honors all Indigenous stewardships of the lands and the waters across Turtle Island. Our studio commits to an ongoing process of collaboration and education. We work to update and replace information that is a continuation of trauma caused by theft, injustice, misinformation, and ignorance. This list is presented as an honouring of Indigenous resilience past, present and future.</p>
+            <p class="linebreak small">There are a number of First Nations in Canada not listed in context of the named or numbered treaties. Animat Habitat honors all Indigenous stewardships of the lands and the waters across Turtle Island. Our studio commits to an ongoing process of collaboration and education. We work to update and replace information that is a continuation of trauma caused by theft, injustice, misinformation, and ignorance. This list is presented as an honouring of Indigenous resilience past, present and future.</p>
 
           </div>
         </div>
